<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arkanos Vocabulary Builder</string>
    <string name="app_name_short">Vocabulary Builder</string>
    <!-- v [milestone].[incremental_version].[wordnet_Version] -->
    <string name="app_version">v0.0.3</string>
    
    <!-- Too Generic -->
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- About Screen -->
    <string name="about_tab">About</string>
    <string name="copyright_external">
		<![CDATA[
			<p>
				WordNet 3.0<br/>
				Copyright (C) 2006<br/>
				Princeton University
			</p>
        ]]>
    </string>
    <string name="copyright">
		<![CDATA[
	        <p>
	        	Arkanos Vocabulary Builder<br/>
	        	Copyright (C) 2014<br/> 
	        	Matheus Borges Teixeira
	        </p>
        ]]>
    </string>
    
    <!-- Change Screen -->
    <string name="change_title">{word} in {language}</string>
    <string name="change_confirm">Confirm</string>
    <string name="change_remove">Remove</string>
    <string name="change_save">Save Changes</string>
    <string name="change_new">Add new term</string>
    <string name="change_add">Add</string>
    
    <!-- Stats Screen -->
    <string name="stats_tab">Stats</string>
    <string name="stats_intro">Your knowledge and database coverage:</string>
    <string name="stats_trial">Test your {language} skills</string>
    <string name="stats_add">Translate dictionary to {language}</string>
    
    <!-- Trial Screen -->
    <string name="trial_next">Confirm and get next</string>
    <string name="trial_dont_know">I don\'t know</string>
    <string name="trial_load">Loading data&#8230;</string>
    <string name="trial_load_text">Please be patient.</string>
    <string name="trial_report_intro">Here are the incorrect answers:</string>
    <string name="trial_report_fix">Fix data</string>
    <string name="trial_report_skipped">
        <![CDATA[
        	The answer is <u>{correct}</u>.
        ]]>
    </string>
    <string name="trial_report_wrong">
        <![CDATA[
        	<u>{wrong}</u> is incorrect&#8230;<br/> 
        	The answer is <u>{correct}</u>.
        ]]>
    </string>
    <string name="trial_report_half">
        <![CDATA[
        	<u>{wrong}</u> is not wrong&#8230;<br/>
        	Expected was <u>{correct}</u>.
        ]]>
    </string>
    
    <!-- Search Screen -->
    <string name="search_tab">Search</string>
    
    <!-- Language Settings -->
    <string name="languages_tab">Languages</string>
    <string name="languages_sv_pretty">Swedish</string>
    <string name="languages_de_pretty">German</string>
    <string name="languages_no_pretty">Norwegian</string>
    <string name="languages_pt_pretty">Portuguese</string>
    <string name="languages_pl_pretty">Polish</string>
    
    <!-- Translations Settings -->
    <string name="de_femininum">Femininum</string>
    <string name="de_maskulinum">Maskulinum</string>
    <string name="de_neutrum">Neutrum</string>
    <string name="de_plural">Plural</string>
    
    <string name="sv_neutrum">neutrum</string>
    <string name="sv_utrum">utrum</string>
    <string name="sv_plural">plural</string>
    
    <string name="load_translation">Installing {language}</string>
    <string name="load_translation_text">{count} senses left.</string>
    <string name="load_translation_start">Loading will commence shortly.</string>
    <string name="load_translation_wait">Waiting for update.</string>
    <string name="load_translation_clean">Cleaning the database.</string>
    <string name="unload_translation">Uninstalling {language}</string>
    <string name="unload_translation_text">Please be patient.</string>
    
    <!-- Loading Dictionary strings -->
	<string name="load_dict">Loading Dictionary</string>
	<string name="load_dict_missing">Missing Dictionary</string>
	<string name="load_dict_confirm">The dictionary needs to be loaded. This is required only once and might take quite some time.\nDo you wish to proceed?</string>
	<string name="load_dict_start">Loading will commence shortly.</string>
	<string name="load_dict_adv">Reading adverbs&#8230;{count} senses left.</string>
	<string name="load_dict_verb">Reading verbs&#8230;{count} senses left.</string>
	<string name="load_dict_adj">Reading adjectives&#8230;{count} senses left.</string>
	<string name="load_dict_noun">Reading nouns&#8230;{count} senses left.</string>
	<string name="load_dict_optimize">Optimizing database&#8230;\nWe\'re almost done!</string>
	<string name="load_dict_wait">Waiting for update.</string>
	
	<!-- Searching Dictionary strings -->
	<string name="dict_search">Search Dictionary</string>
	<string name="dict_placeholder">Search dictionary</string>
	<string name="dict_none">No results found!</string>
	<string name="dict_synonyms">synonyms</string>

</resources>
