<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/use_sv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/flag_sv"
            android:drawablePadding="5dp"
            android:text="@string/languages_sv_pretty"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <CheckBox
            android:id="@+id/use_de"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/flag_de"
            android:drawablePadding="5dp"
            android:text="@string/languages_de_pretty"
            android:textAppearance="?android:attr/textAppearanceLarge" />
            
        <CheckBox
            android:id="@+id/use_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/flag_no"
            android:drawablePadding="5dp"
            android:text="@string/languages_no_pretty"
            android:textAppearance="?android:attr/textAppearanceLarge" />
            
        <CheckBox
            android:id="@+id/use_pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/flag_ptbr"
            android:drawablePadding="5dp"
            android:text="@string/languages_pt_pretty"
            android:textAppearance="?android:attr/textAppearanceLarge" />
            
        <CheckBox
            android:id="@+id/use_pl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/flag_pl"
            android:drawablePadding="5dp"
            android:text="@string/languages_pl_pretty"
            android:textAppearance="?android:attr/textAppearanceLarge" />
            
    </LinearLayout>
    
</ScrollView>
